--- a/BTH745_Website/africa_continent.html
+++ b/BTH745_Website/africa_continent.html
@@ -43,7 +43,7 @@
               <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
           </li>
           <li class="nav-item mx-1">
-            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+            <a class="nav-link align-items-center d-flex" href="cart.html">
               <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
           </li>
           <li class="nav-item mx-1">
