--- a/BTH745_Website/tripPlanner.html
+++ b/BTH745_Website/tripPlanner.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
   <link rel="stylesheet" href="./assets/css/now-ui-kit.css">
+  <link rel="stylesheet" href="./assets/css/tripPlanner.css">
   <link rel="stylesheet" href="assets/css/nucleo-icons.css" type="text/css">
   <script src="./assets/js/browser.js"></script>
   <script src="./assets/js/parallax.js"></script>
@@ -98,9 +99,41 @@
                             <label>Location</label>
                             <input type="email" class="form-control" id="form23" placeholder="Email*"> </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Send</button>
                       </form>
+                      <a href="#locationList">
+                        <button class="btn btn-primary" onclick="showLocation()">Search</button>
+                      </a>
                     </div>
+                  </div>
+                </div>
+              </div>
+              <div class="container tripPlannerLocation" id="locationList" hidden="true" style="">
+                <div class="row hotelDiv">
+                  <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/bcflag.png" width="250px" height="250px"></div>
+                  <div class="col-md-6">
+                    <div>
+                      <h3> Vancouver, British Columbia, Canada</h3>
+                    </div>
+                    <div>
+                      <label><a href="#">Read Review</a></label>
+                    </div>
+                  </div>
+                  <div class="col-md-4" style="text-align: right;">
+                    <div class="addCart"><a class="btn btn-primary" href="#">Add Location</a> </div>
+                  </div>
+                </div>
+                <div class="row hotelDiv">
+                  <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/onflag.png" width="250px" height="250px"></div>
+                  <div class="col-md-6">
+                    <div>
+                      <h3>Toronto, Ontario, Canada</h3>
+                    </div>
+                    <div>
+                      <label><a href="#">Read Review</a></label>
+                    </div>
+                  </div>
+                  <div class="col-md-4" style="text-align: right;">
+                    <div class="addCart"><a class="btn btn-primary" href="#">Add Location</a> </div>
                   </div>
                 </div>
               </div>
@@ -128,13 +161,15 @@
                             <label>Returnn Date</label>
                             <input type="email" class="form-control" id="form23" placeholder="Email*"> </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Send</button>
                       </form>
+                      <a href="#flightList">
+                        <button onclick="showFlight()" class="btn btn-primary">Send</button>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="container tripPlannerFlight">
+              <div class="container tripPlannerFlight" id="flightList" hidden="true" style="">
                 <div class="row flightDiv">
                   <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
                   <div class="col-md-6">
@@ -221,30 +256,22 @@
                             <label>Price range (highest)</label>
                             <input type="email" class="form-control" id="form23" placeholder="Email*"> </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Search</button>
                       </form>
+                      <a href="#hotelList">
+                        <button onclick="showHotel()" class="btn btn-primary"> Search</button></a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="container tripPlannerHotel">
-                <div class="row flightDiv">
-                  <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
+              <div class="container tripPlannerHotel" id="hotelList" hidden="true" style="">
+                <div class="row hotelDiv">
+                  <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel1.jpg" width="250px" height="250px"></div>
                   <div class="col-md-6">
                     <div>
-                      <h3> Air Canada - 2 Ways</h3>
+                      <h3> Galaxy Hotel</h3>
                     </div>
                     <div>
-                      <label>From: Toronto</label>
-                    </div>
-                    <div>
-                      <label>To: Vancouver</label>
-                    </div>
-                    <div>
-                      <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
-                    </div>
-                    <div>
-                      <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+                      <label>Address : 1234 Islington Avenue, Vancouver, BC, Canada</label>
                     </div>
                     <div>
                       <label><a href="#">Read Review</a></label>
@@ -252,28 +279,19 @@
                   </div>
                   <div class="col-md-4" style="text-align: right;">
                     <div>
-                      <h3> Price: $650 </h3>
+                      <h3> Price: $150 / Day </h3>
                     </div>
                     <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
                   </div>
                 </div>
-                <div class="row flightDiv">
-                  <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/westjet.png" width="250px" height="250px"></div>
+                <div class="row hotelDiv">
+                  <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="250px"></div>
                   <div class="col-md-6">
                     <div>
-                      <h3> Westjet - 2 Ways</h3>
+                      <h3> Albert Hotel</h3>
                     </div>
                     <div>
-                      <label>From: Toronto</label>
-                    </div>
-                    <div>
-                      <label>To: Vancouver</label>
-                    </div>
-                    <div>
-                      <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
-                    </div>
-                    <div>
-                      <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+                      <label>Address: 1 School Avenue, Vancouver, BC, Canada</label>
                     </div>
                     <div>
                       <label><a href="#">Read Review</a></label>
@@ -281,7 +299,7 @@
                   </div>
                   <div class="col-md-4" style="text-align: right;">
                     <div>
-                      <h3> Price: $635</h3>
+                      <h3> Price: $200 / Day</h3>
                     </div>
                     <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
                   </div>
@@ -293,9 +311,26 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" style=""></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous" style=""></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
+  <script style="">
+    function showFlight() {
+      document.getElementById("flightList").hidden = false;
+    }
+
+    function showLocation() {
+      document.getElementById("locationList").hidden = false;
+    }
+
+    function showHotel() {
+      document.getElementById("hotelList").hidden = false;
+    }
+
+    function myFunction() {
+      document.getElementById("demo").innerHTML = "Hello World";
+    }
+  </script>
 </body>
 
 </html>
